# pyt

./: .gitignore  README.md  dist_model.py  pyproject.toml
data/: levendist copy.keras  levendist.keras
dist_model/: __main__.py  levendist_dataset_gen.py  model.py  naive_dataset.py  utils.py
pyt/: __main__.py  deltafile.py  editslist.py  revfile.py  utilities.py  utils.py
tests/: test_doctests.py  test_editslist.py
